WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.vb


  Public Declare Function InterGetPoint Lib "Litecad.dll" Alias "lcInterGetPoint" (ByVal iPoint As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Function PlineAddVer Lib "Litecad.dll" Alias "lcPlineAddVer" (ByVal hPline As Integer, ByVal hVer As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function PlineAddVer2 Lib "Litecad.dll" Alias "lcPlineAddVer2" (ByVal hPline As Integer, ByVal hVer As Integer, ByVal X As Double, ByVal Y As Double, ByVal Param As Double, ByVal W0 As Double, ByVal W1 As Double) As Integer

  Public Declare Function PlineAddVerDir Lib "Litecad.dll" Alias "lcPlineAddVerDir" (ByVal hPline As Integer, ByVal hVer As Integer, ByVal Ang As Double, ByVal Length As Double) As Integer

  Public Declare Function PlineDeleteVer Lib "Litecad.dll" Alias "lcPlineDeleteVer" (ByVal hPline As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function PlineGetFirstVer Lib "Litecad.dll" Alias "lcPlineGetFirstVer" (ByVal hPline As Integer) As Integer

  Public Declare Function PlineGetNextVer Lib "Litecad.dll" Alias "lcPlineGetNextVer" (ByVal hPline As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function PlineGetLastVer Lib "Litecad.dll" Alias "lcPlineGetLastVer" (ByVal hPline As Integer) As Integer

  Public Declare Function PlineGetPrevVer Lib "Litecad.dll" Alias "lcPlineGetPrevVer" (ByVal hPline As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function PlineGetVer Lib "Litecad.dll" Alias "lcPlineGetVer" (ByVal hPline As Integer, ByVal Index As Integer) As Integer

  Public Declare Function PlineGetVerPt Lib "Litecad.dll" Alias "lcPlineGetVerPt" (ByVal hPline As Integer, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Integer

  Public Declare Function PlineGetSeg Lib "Litecad.dll" Alias "lcPlineGetSeg" (ByVal hPline As Integer, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Integer

  Public Declare Function PlineReverse Lib "Litecad.dll" Alias "lcPlineReverse" (ByVal hPline As Integer) As Integer

  Public Declare Function PlineSimple Lib "Litecad.dll" Alias "lcPlineSimple" (ByVal hPline As Integer, ByVal bSimple As Integer, ByVal nLines As Integer) As Integer

  Public Declare Function PlineContainPoint Lib "Litecad.dll" Alias "lcPlineContainPoint" (ByVal hPline As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function PlineGetRoundPrm Lib "Litecad.dll" Alias "lcPlineGetRoundPrm" (ByVal hPline As Integer, ByVal hVer As Integer, ByRef px0 As Double, ByRef py0 As Double, ByRef pBulge As Double, ByRef px1 As Double, ByRef py1 As Double) As Integer

  Public Declare Function MlineAddVer Lib "Litecad.dll" Alias "lcMlineAddVer" (ByVal hMline As Integer, ByVal hVer As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function MlineAddVerDir Lib "Litecad.dll" Alias "lcMlineAddVerDir" (ByVal hMline As Integer, ByVal hVer As Integer, ByVal Ang As Double, ByVal Length As Double) As Integer

  Public Declare Function MlineDeleteVer Lib "Litecad.dll" Alias "lcMlineDeleteVer" (ByVal hMline As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function MlineGetFirstVer Lib "Litecad.dll" Alias "lcMlineGetFirstVer" (ByVal hMline As Integer) As Integer

  Public Declare Function MlineGetNextVer Lib "Litecad.dll" Alias "lcMlineGetNextVer" (ByVal hMline As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function MlineGetLastVer Lib "Litecad.dll" Alias "lcMlineGetLastVer" (ByVal hMline As Integer) As Integer

  Public Declare Function MlineGetPrevVer Lib "Litecad.dll" Alias "lcMlineGetPrevVer" (ByVal hMline As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function MlineGetVer Lib "Litecad.dll" Alias "lcMlineGetVer" (ByVal hMline As Integer, ByVal Index As Integer) As Integer

  Public Declare Function MlineGetVerPt Lib "Litecad.dll" Alias "lcMlineGetVerPt" (ByVal hMline As Integer, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Integer

  Public Declare Function MlineGetSeg Lib "Litecad.dll" Alias "lcMlineGetSeg" (ByVal hMline As Integer, ByVal X As Double, ByVal Y As Double, ByVal Delta As Double) As Integer

  Public Declare Function MlineReverse Lib "Litecad.dll" Alias "lcMlineReverse" (ByVal hMline As Integer) As Integer

  Public Declare Function RPlanAddVer Lib "Litecad.dll" Alias "lcRPlanAddVer" (ByVal hRPlan As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function RPlanSetCurve Lib "Litecad.dll" Alias "lcRPlanSetCurve" (ByVal hVer As Integer, ByVal Radius As Double, ByVal LenClot1 As Double, ByVal LenClot2 As Double) As Integer

  Public Declare Function RPlanSetPos Lib "Litecad.dll" Alias "lcRPlanSetPos" (ByVal hVer As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function RPlanDeleteVer Lib "Litecad.dll" Alias "lcRPlanDeleteVer" (ByVal hRPlan As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function RPlanGetFirstVer Lib "Litecad.dll" Alias "lcRPlanGetFirstVer" (ByVal hRPlan As Integer) As Integer

  Public Declare Function RPlanGetNextVer Lib "Litecad.dll" Alias "lcRPlanGetNextVer" (ByVal hRPlan As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function RPlanGetLastVer Lib "Litecad.dll" Alias "lcRPlanGetLastVer" (ByVal hRPlan As Integer) As Integer

  Public Declare Function RPlanGetPrevVer Lib "Litecad.dll" Alias "lcRPlanGetPrevVer" (ByVal hRPlan As Integer, ByVal hVer As Integer) As Integer

  Public Declare Function RPlanGetVer Lib "Litecad.dll" Alias "lcRPlanGetVer" (ByVal hRPlan As Integer, ByVal Index As Integer) As Integer

  Public Declare Function RPlanGetPoint Lib "Litecad.dll" Alias "lcRPlanGetPoint" (ByVal hRPlan As Integer, ByVal Dist As Double, ByRef pX As Double, ByRef pY As Double, ByRef pAngle As Double, ByRef pSide As Integer) As Integer

  Public Declare Function RPlanGetDist Lib "Litecad.dll" Alias "lcRPlanGetDist" (ByVal hRPlan As Integer, ByVal X As Double, ByVal Y As Double, ByRef pX2 As Double, ByRef pY2 As Double, ByRef pDist As Double, ByRef pOffset As Double) As Integer

  Public Declare Function VportSetView Lib "Litecad.dll" Alias "lcVportSetView" (ByVal hVport As Integer, ByVal Xcen As Double, ByVal Ycen As Double, ByVal Scal As Double, ByVal Angle As Double) As Integer

  Public Declare Function VportFrolClear Lib "Litecad.dll" Alias "lcVportFrolClear" (ByVal hVport As Integer) As Integer

  Public Declare Function VportFrolAdd Lib "Litecad.dll" Alias "lcVportFrolAdd" (ByVal hVport As Integer, ByVal hLayer As Integer) As Integer

  Public Declare Function VportFrolGet Lib "Litecad.dll" Alias "lcVportFrolGet" (ByVal hVport As Integer, ByVal iLayer As Integer) As Integer

  Public Declare Function VportIsFrol Lib "Litecad.dll" Alias "lcVportIsFrol" (ByVal hVport As Integer, ByVal hLayer As Integer) As Integer

  Public Declare Unicode Function BlkRefAddAtt Lib "Litecad.dll" Alias "lcBlkRefAddAtt" (ByVal hBlockRef As Integer, ByVal szTag As String, ByVal szValue As String) As Integer

  Public Declare Function BlkRefGetFirstAtt Lib "Litecad.dll" Alias "lcBlkRefGetFirstAtt" (ByVal hBlockRef As Integer) As Integer

  Public Declare Function BlkRefGetNextAtt Lib "Litecad.dll" Alias "lcBlkRefGetNextAtt" (ByVal hBlockRef As Integer, ByVal hAttrib As Integer) As Integer

  Public Declare Unicode Function BlkRefGetAtt Lib "Litecad.dll" Alias "lcBlkRefGetAtt" (ByVal hBlockRef As Integer, ByVal szTag As String) As Integer

  Public Declare Unicode Function HatchSetPattern Lib "Litecad.dll" Alias "lcHatchSetPattern" (ByVal hHatch As Integer, ByVal szFileName As String, ByVal szPatName As String, ByVal Scal As Double, ByVal Angle As Double) As Integer

  Public Declare Function HatchBoundStart Lib "Litecad.dll" Alias "lcHatchBoundStart" (ByVal hHatch As Integer) As Integer

  Public Declare Function HatchBoundPoint Lib "Litecad.dll" Alias "lcHatchBoundPoint" (ByVal hHatch As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function HatchBoundEndLoop Lib "Litecad.dll" Alias "lcHatchBoundEndLoop" (ByVal hHatch As Integer) As Integer

  Public Declare Function HatchBoundEnd Lib "Litecad.dll" Alias "lcHatchBoundEnd" (ByVal hHatch As Integer) As Integer

  Public Declare Function HatchPatStart Lib "Litecad.dll" Alias "lcHatchPatStart" (ByVal hHatch As Integer) As Integer

  Public Declare Function HatchPatLine Lib "Litecad.dll" Alias "lcHatchPatLine" (ByVal hHatch As Integer, ByVal Angle As Double, ByVal x0 As Double, ByVal y0 As Double, ByVal dx As Double, ByVal dy As Double, ByVal nDash As Integer, ByVal L0 As Double, ByVal L1 As Double, ByVal L2 As Double, ByVal L3 As Double, ByVal L4 As Double, ByVal L5 As Double, ByVal L6 As Double, ByVal L7 As Double) As Integer

  Public Declare Function HatchPatEnd Lib "Litecad.dll" Alias "lcHatchPatEnd" (ByVal hHatch As Integer) As Integer

  Public Declare Function HatchGetLoopSize Lib "Litecad.dll" Alias "lcHatchGetLoopSize" (ByVal hHatch As Integer, ByVal iLoop As Integer) As Integer

  Public Declare Function HatchGetPoint Lib "Litecad.dll" Alias "lcHatchGetPoint" (ByVal hHatch As Integer, ByVal iPnt As Integer, ByRef pX As Double, ByRef pY As Double) As Integer

  Public Declare Function RectGetPolyline Lib "Litecad.dll" Alias "lcRectGetPolyline" (ByVal hRect As Integer, ByRef pX As Double, ByRef pY As Double, ByRef pBulge As Double) As Integer

  Public Declare Function XlinePutDir Lib "Litecad.dll" Alias "lcXlinePutDir" (ByVal hXline As Integer, ByVal X As Double, ByVal Y As Double) As Integer

  Public Declare Function TinClear Lib "Litecad.dll" Alias "lcTinClear" (ByVal hTin As Integer, ByVal bOnlyTrians As Integer) As Integer

  Public Declare Unicode Function TinLoad Lib "Litecad.dll" Alias "lcTinLoad" (ByVal hTin As Integer, ByVal szFileName As String, ByVal bEmbed As Integer) As Integer

  Public Declare Unicode Function TinSave Lib "Litecad.dll" Alias "lcTinSave" (ByVal hTin As Integer, ByVal szFileName As String, ByVal bOverwriteExist As Integer) As Integer

  Public Declare Unicode Function TinAddPtype Lib "Litecad.dll" Alias "lcTinAddPtype" (ByVal hTin As Integer, ByVal szName As String, ByVal szNotes As String, ByVal Color As Integer) As Integer

  Public Declare Function TinAddPoint Lib "Litecad.dll" Alias "lcTinAddPoint" (ByVal hTin As Integer, ByVal hPtype As Integer, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Integer

  Public Declare Function TinAddTrian Lib "Litecad.dll" Alias "lcTinAddTrian" (ByVal hTin As Integer, ByVal hPt0 As Integer, ByVal hPt1 As Integer, ByVal hPt2 As Integer) As Integer

  Public Declare Function TinNormalize Lib "Litecad.dll" Alias "lcTinNormalize" (ByVal hTin As Integer) As Integer

  Public Declare Function TinGetZ Lib "Litecad.dll" Alias "lcTinGetZ" (ByVal hTin As Integer, ByVal X As Double, ByVal Y As Double, ByRef pZ As Double) As Integer

  Public Declare Function TinInterLine Lib "Litecad.dll" Alias "lcTinInterLine" (ByVal hTin As Integer, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double) As Integer

  Public Declare Function TinInterGetPoint Lib "Litecad.dll" Alias "lcTinInterGetPoint" (ByVal hTin As Integer, ByVal iPnt As Integer, ByRef pX As Double, ByRef pY As Double, ByRef pZ As Double) As Integer

  Public Declare Function TinDelPtype Lib "Litecad.dll" Alias "lcTinDelPtype" (ByVal hTin As Integer, ByVal hPtype As Integer) As Integer

  Public Declare Function TinDelPoint Lib "Litecad.dll" Alias "lcTinDelPoint" (ByVal hTin As Integer, ByVal hPoint As Integer) As Integer

  Public Declare Function TinDelTrian Lib "Litecad.dll" Alias "lcTinDelTrian" (ByVal hTin As Integer, ByVal hTrian As Integer) As Integer

  Public Declare Function TinPtypeGetFirst Lib "Litecad.dll" Alias "lcTinPtypeGetFirst" (ByVal hTin As Integer) As Integer
